--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -19,8 +19,8 @@
         <a href="{{ "/recipe/" | relURL }}">Recipe</a>
         <a href="{{ "/about/" | relURL }}">About</a>
       </nav>
-      <button class="menu-button">
-        <img class="icon" src='{{ "/icons/bars-solid.svg" | relURL }}' alt="menu">
+      <button class="menu-button icon">
+        <img src='{{ "/icons/bars-solid.svg" | relURL }}' alt="menu">
       </button>
     </div>
 </header>
