--- a/static/css/variables.css
+++ b/static/css/variables.css
@@ -4,12 +4,6 @@
     --text-color: #333333;
     --shadow-color: #7f7b82;
 
-    --light-olive-green: #8ED6CB;
-    --dark-purple: #461561;
-    --light-purple: #8F45A5;
-    --lightest-purple: #c18cd1;
-    --dark-olive-green: #348071;
-
     --font-primary: 'Teko', sans-serif;
     --font-secondary: 'AzeretMono', monospace;
 
@@ -28,6 +22,6 @@ body.dark {
     --text-color: #ffffff;
     --shadow-color: #7f7b82;
 
-    --light-olive-green: #8ED6CB;
-    --light-purple: #8F45A5;
+    /* --primary-color: #8ED6CB;
+    --secondary-color: #8F45A5; */
 }
