--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 /* main.css */
-@import url('/css/fonts.css');
+@import url('fonts.css');
 @import url('/css/reset.css');
 @import url('/css/variables.css');
 @import url('/css/global.css');
