change to absURL

--- a/layouts/about/single.html
+++ b/layouts/about/single.html
@@ -42,8 +42,8 @@
             <div class="timeline-item">
                 <div class="last-dot">
                     <div class="CV icon" id="jump-to-here">
-                        <a href='{{ "documents/CV.pdf" | relURL }}' target="_blank" rel="noopener noreferrer">
-                            <img src='{{ "/icons/file-solid.svg" | relURL }}' alt="Download CV" class="no-overlay">
+                        <a href='{{ "documents/CV.pdf" | absURL }}' target="_blank" rel="noopener noreferrer">
+                            <img src='{{ "icons/file-solid.svg" | absURL }}' alt="Download CV" class="no-overlay">
                         </a>
                     </div>
                 </div>
