--- a/layouts/book/list.html
+++ b/layouts/book/list.html
@@ -19,13 +19,13 @@
       <div class="book-report-metadata-line">
         <div class="metadata-entry">
           <div class="icon">
-            <img class="no-overlay" src='{{ "/icons/calendar-solid.svg" | relURL }}' alt="Calendar-Date">
+            <img class="no-overlay" src='{{ "icons/calendar-solid.svg" | absURL }}' alt="Calendar-Date">
           </div>
           <p>{{ .Date.Format "02.01.2006" }}</p>
         </div>
         <div class="metadata-entry">
           <div class="icon">
-            <img class="no-overlay" src='{{ "/icons/star-solid.svg" | relURL }}' alt="Length">
+            <img class="no-overlay" src='{{ "icons/star-solid.svg" | absURL }}' alt="Length">
           </div>
           <p>{{ .Params.metadata.rating}}</p>
         </div>
