--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,7 +1,7 @@
 /* main.css */
 @import url('fonts.css');
-@import url('/css/reset.css');
-@import url('/css/variables.css');
-@import url('/css/global.css');
-@import url('/css/layout.css');
-@import url('/css/components.css');
+@import url('reset.css');
+@import url('variables.css');
+@import url('global.css');
+@import url('layout.css');
+@import url('components.css');
