--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -12,12 +12,12 @@
       </div>
       
       <nav>
-        <a href="{{ 'blog/' | absURL }}">Blog</a>
-        <a href="{{ '/retro/' | relURL }}">Retro</a>
-        <a href="{{ '/project/' | relURL }}"/>Project</a>
-        <a href="{{ '/book/' | relURL }}">Book</a>
-        <a href="{{ '/recipe/' | relURL }}">Recipe</a>
-        <a href="{{ '/about/' | relURL }}">About</a>
+        <a href="{{ "blog/" | absURL }}">Blog</a>
+        <a href="{{ "/retro/" | relURL }}">Retro</a>
+        <a href="{{ "/project/" | relURL }}"/>Project</a>
+        <a href="{{ "/book/" | relURL }}">Book</a>
+        <a href="{{ "/recipe/" | relURL }}">Recipe</a>
+        <a href="{{ "/about/" | relURL }}">About</a>
       </nav>
       <button class="menu-button icon">
         <img src='{{ "icons/bars-solid.svg" | absURL }}' alt="menu">
