--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,7 +1,7 @@
 <header>
     <div class="header-container">
       <div class="header-title">
-        <a href="/">
+        <a href="{{ .Site.BaseURL }}">
           <b>{{ .Site.Title }}</b>
         </a>
         <button class="dark-mode-toggle icon" >
