--- a/static/css/global.css
+++ b/static/css/global.css
@@ -15,6 +15,11 @@ p, li, ol, i, b, a {
   font-family: var(--font-secondary);
 }
 
+p > a{
+  font-size: 2.4rem;
+  color: var(--primary-color);
+}
+
 /* =========== Writing =========== */
 h1 {
   font-size: 18.2rem;
@@ -158,6 +163,20 @@ ul p {
   font-size: 1.49rem;
   padding: 0rem;
   padding-bottom: var(--minimal-space);
+}
+
+ul ul {
+  padding-left: calc(2*var(--standard-space));
+  padding-top: var(--minimal-space);
+  padding-bottom: 0;
+}
+
+ul ul li {
+  padding-bottom: var(--minimal-space);
+}
+
+ul ul li:last-child {
+  padding-bottom: 0;
 }
 
 ol {
