--- a/static/css/global.css
+++ b/static/css/global.css
@@ -15,9 +15,20 @@ p, li, ol, i, b, a {
   font-family: var(--font-secondary);
 }
 
-p > a{
+p a{
   font-size: 2.4rem;
   color: var(--primary-color);
+}
+
+/* Remove extra line spacing caused by sup */
+sup {
+  line-height: 0; /* Prevents the superscript from increasing line height */
+  vertical-align: super;
+  margin-left: 0.1em; /* Adds a small space before the superscript for readability */
+}
+
+sup a {
+  font-size: 2.0rem;
 }
 
 /* =========== Writing =========== */
