--- a/static/css/syntax_dark.css
+++ b/static/css/syntax_dark.css
@@ -1,88 +1,88 @@
-/* Generated using: hugo gen chromastyles --style=rose-pine-moon */
+/* Generated using: hugo gen chromastyles --style=nord */
 
-/* Background */ .bg { color:#e0def4;background-color:#232136; }
-/* PreWrapper */ .chroma { color:#e0def4;background-color:#232136; }
+/* Background */ .bg { color:#d8dee9;background-color:#2e3440; }
+/* PreWrapper */ .chroma { color:#d8dee9;background-color:#2e3440; }
 /* Other */ .chroma .x {  }
-/* Error */ .chroma .err { color:#eb6f92 }
+/* Error */ .chroma .err { color:#bf616a }
 /* CodeLine */ .chroma .cl {  }
 /* LineLink */ .chroma .lnlinks { outline:none;text-decoration:none;color:inherit }
 /* LineTableTD */ .chroma .lntd { vertical-align:top;padding:0;margin:0;border:0; }
 /* LineTable */ .chroma .lntable { border-spacing:0;padding:0;margin:0;border:0; }
-/* LineHighlight */ .chroma .hl { background-color:#39374a }
-/* LineNumbersTable */ .chroma .lnt { white-space:pre;-webkit-user-select:none;user-select:none;margin-right:0.4em;padding:0 0.4em 0 0.4em;color:#7f7f7f }
-/* LineNumbers */ .chroma .ln { white-space:pre;-webkit-user-select:none;user-select:none;margin-right:0.4em;padding:0 0.4em 0 0.4em;color:#7f7f7f }
+/* LineHighlight */ .chroma .hl { background-color:#424853 }
+/* LineNumbersTable */ .chroma .lnt { white-space:pre;-webkit-user-select:none;user-select:none;margin-right:0.4em;padding:0 0.4em 0 0.4em;color:#6c6f74 }
+/* LineNumbers */ .chroma .ln { white-space:pre;-webkit-user-select:none;user-select:none;margin-right:0.4em;padding:0 0.4em 0 0.4em;color:#6c6f74 }
 /* Line */ .chroma .line { display:flex; }
-/* Keyword */ .chroma .k { color:#3e8fb0 }
-/* KeywordConstant */ .chroma .kc { color:#3e8fb0 }
-/* KeywordDeclaration */ .chroma .kd { color:#3e8fb0 }
-/* KeywordNamespace */ .chroma .kn { color:#c4a7e7 }
-/* KeywordPseudo */ .chroma .kp { color:#3e8fb0 }
-/* KeywordReserved */ .chroma .kr { color:#3e8fb0 }
-/* KeywordType */ .chroma .kt { color:#3e8fb0 }
-/* Name */ .chroma .n { color:#ea9a97 }
-/* NameAttribute */ .chroma .na { color:#ea9a97 }
-/* NameBuiltin */ .chroma .nb { color:#ea9a97 }
-/* NameBuiltinPseudo */ .chroma .bp { color:#ea9a97 }
-/* NameClass */ .chroma .nc { color:#9ccfd8 }
-/* NameConstant */ .chroma .no { color:#f6c177 }
-/* NameDecorator */ .chroma .nd { color:#908caa }
-/* NameEntity */ .chroma .ni { color:#ea9a97 }
-/* NameException */ .chroma .ne { color:#3e8fb0 }
-/* NameFunction */ .chroma .nf { color:#ea9a97 }
-/* NameFunctionMagic */ .chroma .fm { color:#ea9a97 }
-/* NameLabel */ .chroma .nl { color:#ea9a97 }
-/* NameNamespace */ .chroma .nn { color:#ea9a97 }
+/* Keyword */ .chroma .k { color:#81a1c1;font-weight:bold }
+/* KeywordConstant */ .chroma .kc { color:#81a1c1;font-weight:bold }
+/* KeywordDeclaration */ .chroma .kd { color:#81a1c1;font-weight:bold }
+/* KeywordNamespace */ .chroma .kn { color:#81a1c1;font-weight:bold }
+/* KeywordPseudo */ .chroma .kp { color:#81a1c1 }
+/* KeywordReserved */ .chroma .kr { color:#81a1c1;font-weight:bold }
+/* KeywordType */ .chroma .kt { color:#81a1c1 }
+/* Name */ .chroma .n {  }
+/* NameAttribute */ .chroma .na { color:#8fbcbb }
+/* NameBuiltin */ .chroma .nb { color:#81a1c1 }
+/* NameBuiltinPseudo */ .chroma .bp {  }
+/* NameClass */ .chroma .nc { color:#8fbcbb }
+/* NameConstant */ .chroma .no { color:#8fbcbb }
+/* NameDecorator */ .chroma .nd { color:#d08770 }
+/* NameEntity */ .chroma .ni { color:#d08770 }
+/* NameException */ .chroma .ne { color:#bf616a }
+/* NameFunction */ .chroma .nf { color:#88c0d0 }
+/* NameFunctionMagic */ .chroma .fm {  }
+/* NameLabel */ .chroma .nl { color:#8fbcbb }
+/* NameNamespace */ .chroma .nn { color:#8fbcbb }
 /* NameOther */ .chroma .nx {  }
-/* NameProperty */ .chroma .py { color:#ea9a97 }
-/* NameTag */ .chroma .nt { color:#ea9a97 }
-/* NameVariable */ .chroma .nv { color:#ea9a97 }
-/* NameVariableClass */ .chroma .vc { color:#ea9a97 }
-/* NameVariableGlobal */ .chroma .vg { color:#ea9a97 }
-/* NameVariableInstance */ .chroma .vi { color:#ea9a97 }
-/* NameVariableMagic */ .chroma .vm { color:#ea9a97 }
-/* Literal */ .chroma .l { color:#f6c177 }
-/* LiteralDate */ .chroma .ld { color:#f6c177 }
-/* LiteralString */ .chroma .s { color:#f6c177 }
-/* LiteralStringAffix */ .chroma .sa { color:#f6c177 }
-/* LiteralStringBacktick */ .chroma .sb { color:#f6c177 }
-/* LiteralStringChar */ .chroma .sc { color:#f6c177 }
-/* LiteralStringDelimiter */ .chroma .dl { color:#f6c177 }
-/* LiteralStringDoc */ .chroma .sd { color:#f6c177 }
-/* LiteralStringDouble */ .chroma .s2 { color:#f6c177 }
-/* LiteralStringEscape */ .chroma .se { color:#3e8fb0 }
-/* LiteralStringHeredoc */ .chroma .sh { color:#f6c177 }
-/* LiteralStringInterpol */ .chroma .si { color:#f6c177 }
-/* LiteralStringOther */ .chroma .sx { color:#f6c177 }
-/* LiteralStringRegex */ .chroma .sr { color:#f6c177 }
-/* LiteralStringSingle */ .chroma .s1 { color:#f6c177 }
-/* LiteralStringSymbol */ .chroma .ss { color:#f6c177 }
-/* LiteralNumber */ .chroma .m { color:#f6c177 }
-/* LiteralNumberBin */ .chroma .mb { color:#f6c177 }
-/* LiteralNumberFloat */ .chroma .mf { color:#f6c177 }
-/* LiteralNumberHex */ .chroma .mh { color:#f6c177 }
-/* LiteralNumberInteger */ .chroma .mi { color:#f6c177 }
-/* LiteralNumberIntegerLong */ .chroma .il { color:#f6c177 }
-/* LiteralNumberOct */ .chroma .mo { color:#f6c177 }
-/* Operator */ .chroma .o { color:#908caa }
-/* OperatorWord */ .chroma .ow { color:#908caa }
-/* Punctuation */ .chroma .p { color:#908caa }
-/* Comment */ .chroma .c { color:#6e6a86 }
-/* CommentHashbang */ .chroma .ch { color:#6e6a86 }
-/* CommentMultiline */ .chroma .cm { color:#6e6a86 }
-/* CommentSingle */ .chroma .c1 { color:#6e6a86 }
-/* CommentSpecial */ .chroma .cs { color:#6e6a86 }
-/* CommentPreproc */ .chroma .cp { color:#6e6a86 }
-/* CommentPreprocFile */ .chroma .cpf { color:#6e6a86 }
+/* NameProperty */ .chroma .py { color:#8fbcbb }
+/* NameTag */ .chroma .nt { color:#81a1c1 }
+/* NameVariable */ .chroma .nv {  }
+/* NameVariableClass */ .chroma .vc {  }
+/* NameVariableGlobal */ .chroma .vg {  }
+/* NameVariableInstance */ .chroma .vi {  }
+/* NameVariableMagic */ .chroma .vm {  }
+/* Literal */ .chroma .l {  }
+/* LiteralDate */ .chroma .ld {  }
+/* LiteralString */ .chroma .s { color:#a3be8c }
+/* LiteralStringAffix */ .chroma .sa { color:#a3be8c }
+/* LiteralStringBacktick */ .chroma .sb { color:#a3be8c }
+/* LiteralStringChar */ .chroma .sc { color:#a3be8c }
+/* LiteralStringDelimiter */ .chroma .dl { color:#a3be8c }
+/* LiteralStringDoc */ .chroma .sd { color:#616e87 }
+/* LiteralStringDouble */ .chroma .s2 { color:#a3be8c }
+/* LiteralStringEscape */ .chroma .se { color:#ebcb8b }
+/* LiteralStringHeredoc */ .chroma .sh { color:#a3be8c }
+/* LiteralStringInterpol */ .chroma .si { color:#a3be8c }
+/* LiteralStringOther */ .chroma .sx { color:#a3be8c }
+/* LiteralStringRegex */ .chroma .sr { color:#ebcb8b }
+/* LiteralStringSingle */ .chroma .s1 { color:#a3be8c }
+/* LiteralStringSymbol */ .chroma .ss { color:#a3be8c }
+/* LiteralNumber */ .chroma .m { color:#b48ead }
+/* LiteralNumberBin */ .chroma .mb { color:#b48ead }
+/* LiteralNumberFloat */ .chroma .mf { color:#b48ead }
+/* LiteralNumberHex */ .chroma .mh { color:#b48ead }
+/* LiteralNumberInteger */ .chroma .mi { color:#b48ead }
+/* LiteralNumberIntegerLong */ .chroma .il { color:#b48ead }
+/* LiteralNumberOct */ .chroma .mo { color:#b48ead }
+/* Operator */ .chroma .o { color:#81a1c1 }
+/* OperatorWord */ .chroma .ow { color:#81a1c1;font-weight:bold }
+/* Punctuation */ .chroma .p { color:#eceff4 }
+/* Comment */ .chroma .c { color:#616e87;font-style:italic }
+/* CommentHashbang */ .chroma .ch { color:#616e87;font-style:italic }
+/* CommentMultiline */ .chroma .cm { color:#616e87;font-style:italic }
+/* CommentSingle */ .chroma .c1 { color:#616e87;font-style:italic }
+/* CommentSpecial */ .chroma .cs { color:#616e87;font-style:italic }
+/* CommentPreproc */ .chroma .cp { color:#5e81ac;font-style:italic }
+/* CommentPreprocFile */ .chroma .cpf { color:#5e81ac;font-style:italic }
 /* Generic */ .chroma .g {  }
-/* GenericDeleted */ .chroma .gd { color:#eb6f92 }
+/* GenericDeleted */ .chroma .gd { color:#bf616a }
 /* GenericEmph */ .chroma .ge { font-style:italic }
-/* GenericError */ .chroma .gr {  }
-/* GenericHeading */ .chroma .gh {  }
-/* GenericInserted */ .chroma .gi { color:#9ccfd8 }
+/* GenericError */ .chroma .gr { color:#bf616a }
+/* GenericHeading */ .chroma .gh { color:#88c0d0;font-weight:bold }
+/* GenericInserted */ .chroma .gi { color:#a3be8c }
 /* GenericOutput */ .chroma .go {  }
-/* GenericPrompt */ .chroma .gp {  }
+/* GenericPrompt */ .chroma .gp { color:#4c566a;font-weight:bold }
 /* GenericStrong */ .chroma .gs { font-weight:bold }
-/* GenericSubheading */ .chroma .gu { color:#c4a7e7 }
-/* GenericTraceback */ .chroma .gt {  }
+/* GenericSubheading */ .chroma .gu { color:#88c0d0;font-weight:bold }
+/* GenericTraceback */ .chroma .gt { color:#bf616a }
 /* GenericUnderline */ .chroma .gl {  }
 /* TextWhitespace */ .chroma .w {  }
