--- a/static/css/variables.css
+++ b/static/css/variables.css
@@ -17,7 +17,7 @@
 
 /* Dark theme variables */
 body.dark {
-    --background-color: #201f1f;
+    --background-color: #29232d;
     --text-color: #ffffff;
     --shadow-color: #7f7b82;
 
