Add: Code Copy Button + minor bug fixes

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,11 +1,16 @@
 {{ define "main" }}
+<div class="main-container">
+    <h1>{{ .Page.Title }}</h1>
+    <p class="page-summary">{{ .Page.Params.description }}</p>
+    <hr class="first-hr">
 
-    <h1>List</h1>
-    {{ range .Pages }}
-        <article>
-            <h2>{{ .Title }}</h2>
-            {{ .Content | truncate 250 }}
-        </article>
+    {{ range (sort .Pages "Date" "desc") }}
+    <article>
+        <a href="{{ .RelPermalink }}">
+            <h2 class="blog-title">{{ .Title }}</h2>
+        </a>
+        <p class="blog-summary">{{ .Summary }}</p>
+    </article>
     {{ end }}
-
+</div>
 {{ end }}
