--- a/layouts/shortcodes/metadata.html
+++ b/layouts/shortcodes/metadata.html
@@ -8,7 +8,7 @@
     <p>{{ if gt $index 0 }}•{{ end }}</p>
     <div class="category">
       <p>
-        <a href="{{ " /categories/" | relURL }}{{ $category | urlize }}">{{ $category }}</a>
+        <a href='{{ "/categories/" | relURL }}{{ $category | urlize }}'>{{ $category }}</a>
       </p>
     </div>
     {{ end }}
@@ -26,7 +26,7 @@
     <p>{{ if gt $index 0 }}•{{ end }}</p>
     <div class="tag">
       <p>
-        <a href="{{ " /tags/" | relURL }}{{ $tag | urlize }}">{{ $tag }}</a>
+        <a href='{{ "/tags/" | relURL }}{{ $tag | urlize }}'>{{ $tag }}</a>
       </p>
     </div>
     {{ end }}
