--- a/layouts/shortcodes/gallery.html
+++ b/layouts/shortcodes/gallery.html
@@ -1,4 +1,5 @@
 {{ $dir := .Get "src" | default "gallery" }}
+{{ $currentindex := .Get "currentindex" | default 1 }}
 
 {{ $images := (.Page.Resources.ByType "image").Match (printf "%s**" $dir) }}
 {{ if not $images }}
@@ -8,7 +9,7 @@
 
 
 {{ if $images }}
-<div class="gallery">
+<div class="gallery" data-current-index="{{ $currentindex }}">
   <div class="sliderimages">
     {{ range $images }}
       <div class="image-wrapper"><img src="{{ .RelPermalink }}" alt="Gallery Image"></div>
