--- a/static/css/components.css
+++ b/static/css/components.css
@@ -207,6 +207,16 @@ main {
     object-fit: contain;
 }
 
+.icon svg {
+    height: 100%;
+    width: 100%;
+    object-fit: contain;
+}
+
+.icon.primary-color svg {
+    fill: var(--primary-color)
+}
+
 /* =========== Metadata Entry =========== */
 .metadata-line {
     width: auto;
