--- a/layouts/shortcodes/metadata.html
+++ b/layouts/shortcodes/metadata.html
@@ -37,12 +37,20 @@
 {{ end }}
 
 <div class="metadata-line">
+  {{ with .Page.Date }}
+    <div class="metadata-entry">
+      <div class="icon">
+        <img class="no-overlay" src='{{ "icons/calendar-solid.svg" | absURL }}' alt="Calendar-Date">
+      </div>
+      <p>{{ .Format "2006.01.02" }}</p>
+    </div>
+  {{ end }}
   {{ with $gitinfo }}
     <div class="metadata-entry">
       <div class="icon">
         <img class="no-overlay" src='{{ "icons/pencil-solid.svg" | absURL }}' alt="Last-Modified">
       </div>
-      <p>{{ .AuthorDate.Format "2006-01-02" }}</p>
+      <p>{{ .AuthorDate.Format "2006.01.02" }}</p>
     </div>
   {{ else with .Page.Lastmod }}
     <div class="metadata-entry">
