Add Subtitle & Place

--- a/layouts/book/single.html
+++ b/layouts/book/single.html
@@ -1,6 +1,7 @@
 {{ define "main" }}
 <div class="main-container">
   <h1>{{ .Title }}</h1>
+  <h2>{{ .Page.Params.subtitle }}</h2>
   <div class="centered">
     <!-- <div class="book-metadata-tile">
       <div class="book-img-container">
