--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,6 +1,7 @@
 {{ define "main" }}
   <div class="main-container">
-    <h1>{{ .Title }}</h1>  
+    <h1>{{ .Title }}</h1>
+    <h2>{{ .Page.Params.subtitle }}</h2>
     <p class="page-summary">{{ .Summary }}</p>
     {{ .Content }}
   </div>
