--- a/layouts/about/single.html
+++ b/layouts/about/single.html
@@ -1,6 +1,7 @@
 {{ define "main" }}
 <div class="main-container">
     <h1>{{ .Title }}</h1>
+    <h2>{{ .Page.Params.subtitle }}</h2>
     <!-- <p class="page-summary">{{ .Page.Params.description }}</p>
     <hr class="first-hr"> -->
     <div class="about-container">
