--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,6 +1,7 @@
 {{ define "main" }}
 <div class="main-container">
   <h1>{{ .Title }}</h1>
+  <h2>{{ .Page.Params.subtitle }}</h2>
   <p class="page-summary">{{ .Params.description | markdownify  }}</p>
 
   <div>{{ .Content }}</div>
